syntax = "proto3";

package supernode;

// Service representing the supernode
service Supernode {
  // When a node wantes to join the DHT, it contacts the Supernode
  // If the Supernode is busy in join process of another node,
  // it tells requesting node.
  rpc Join(JoinRequest) returns (JoinResponse) {}

  // After the node is done joining the DHT and distributing the list
  // of nodes to the other nodes, it should notify the Supernode.
  rpc PostJoin(PostJoinRequest) returns (Empty) {}

  // When a client wants to utilize the chord system, it needs a DHT node.
  // The Supernode returns a random node for the client to connect to.
  rpc GetNode(Empty) returns (NodeResponse) {}
}

message Empty {}

message NodeInfo {
  string ip = 1;
  int32 port = 2;
}

message JoinRequest {
  NodeInfo node = 1;
}

message JoinResponse {
  repeated NodeInfo nodes = 1;
}

message PostJoinRequest {
  NodeInfo node = 1;
}

message NodeResponse {
  NodeInfo node = 1;
}
